<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/location"
      android:showAsAction="never"
      android:title="@string/menu_location"/>
  <item
    android:id="@+id/camera"
    android:showAsAction="never"
    android:title="@string/menu_camera"/>
  <item
      android:id="@+id/internet"
      android:showAsAction="never"
      android:title="@string/menu_internet"/>
  <item
    android:id="@+id/contacts"
    android:showAsAction="never"
    android:visible="true"
    android:title="@string/menu_contacts"/>
  <item
      android:id="@+id/storage"
      android:showAsAction="never"
      android:title="@string/menu_storage"/>
  <item
      android:id="@+id/extra"
      android:showAsAction="never"
      android:title="@string/menu_extra"/>
  <item
      android:id="@+id/phone1"
      android:showAsAction="never"
      android:title="@string/menu_phone1"/>
  <item
      android:id="@+id/phone2"
      android:showAsAction="never"
      android:title="@string/menu_phone2"/>
  <item
      android:id="@+id/sms"
      android:showAsAction="never"
      android:title="@string/menu_sms"/>

</menu>